crates/interpreter/src/snapshots/submilli_engine__diagnostics__tests__render_zero_length_span_at_eof.snap
---
source: crates/interpreter/src/diagnostics.rs
expression: "render(&diag, \"script.subm\", source, &line_index)"
---
error: expected `;`
 --> script.subm:1:6
  |
1 | hello
  |      ^
